syntax = "proto3";

option go_package = "pb";
import "github.com/bifrostcloud/protoc-gen-httpclient/proto/types.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = false;
option (gogoproto.sizer_all) = false;
option (gogoproto.unmarshaler_all) = false;
message Package {
    string package_name = 1;
    string package_path = 2;
}
message Input {
    string field_name = 1; 
    string field_value = 2; 
}
message Base {
    string package = 1; 
    repeated Package imports = 2 [(gogoproto.nullable) = false] ; 
    repeated Service services = 3 [(gogoproto.nullable) = false] ; 
}
message Service {
    string upper_camel_case_service_name = 1; 
    string lower_camel_case_service_name = 2; 
    string auth = 3; 
    repeated Method methods = 4 [(gogoproto.nullable) = false] ; 
}
message Method {
    string upper_camel_case_service_name = 1; 
    string upper_camel_case_method_name = 2; 
    string input_type = 3; 
    string output_type = 4; 
    string auth = 5; 
    RequestOptions request_options = 6 [(gogoproto.nullable) = false] ; 
}